--- a/_data/messages.yaml
+++ b/_data/messages.yaml
@@ -1,5 +1,8 @@
 # This will appear on the site in the order as it is
 # listed here, so add new items on top
+- content: This is a test of rss feed hooks 
+  status: green
+  timestamp: 2015-04-09 17:40 +0200
 - content: Everything up and running
   status: green
   timestamp: 2015-04-09 12:00 +0200
